# prime-game

./: .gitignore  Cargo.toml  License  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  game_command.rs
client/: Cargo.toml
client/assets/scenes/: breakout.scn
client/src/: lib.rs  main.rs
client/src/cli/: cli.rs  game_command.rs
client/src/data/: json_file.rs  mod.rs
client/src/engine/: engine_client.rs  engine_test.rs  mod.rs
client/src/engine/event/: control_event.rs  heart_beat_event.rs  keyboard_event.rs  mod.rs  my_event.rs  player_update_event.rs  skill_event.rs  sync_event.rs  window_event.rs
client/src/engine/plugin/: animate_plugin.rs  camera_ctrl_plugin.rs  clipboard.rs  fps.rs  fps_plugin.rs  mod.rs  network.rs  network_plugin.rs  ping.rs  player.rs  player_plugin.rs  tile_map copy.rs  tile_map.rs  tile_map_plugin.rs  ui_plugin.rs
client/src/engine/scene/: breakout.rs  mod.rs  snake.rs
client/src/net/: mod.rs  net_client.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  tile_map.rs
config/: Cargo.toml
config/src/: lib.rs
data/: Cargo.toml
data/src/: client_db.rs  game_client_db.rs  game_db.rs  game_server_db.rs  lib.rs  rocksdb.rs  server_db.rs  sled_db.rs
data/src/db/: client_db.rs  mod.rs  server_db.rs
data/src/default/: mod.rs  superposition.rs
engine/: Cargo.toml
engine/src/: engine.rs
engine/src/plugin/: mod.rs
engine/src/scene/: breakout.rs  mod.rs
example/: Cargo.toml
example/src/: data.rs  lib.rs  main.rs
example/src/plugin/: mod.rs  tile_map.rs
main/: Cargo.toml
main/src/: client.rs  client_test.rs  server.rs  test_client.rs  test_server.rs
net/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs  packet.rs  route.rs
protocol/src/data/: account_data.rs  control_data.rs  mod.rs  move_data.rs  player_data.rs  skill_data.rs  tile_map_data.rs  update_data.rs
run/: Cargo.toml
run/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/cli/: cli.rs  mod.rs
server/src/data/: game_db.rs  mod.rs  rocksdb.rs
server/src/engine/: engine_server.rs  mod.rs
server/src/net/: mod.rs  net_server.rs
shadow-client/: Cargo.toml
shadow-client/src/: engine.rs  lib.rs  main.rs
shadow-client/src/event/: sync_event.rs
shadow-client/src/plugin/: network_plugin.rs
shadow-server/: Cargo.toml
shadow-server/src/: main.rs
shadow-server/src/cli/: cli.rs  command.rs
shadow-server/src/engine/: engine_server.rs
shadow-server/src/net/: net_server.rs
src/: client.rs  client_test.rs  main.rs  server.rs
src/data/: game_db.rs  rocksdb.rs
src/engine/: engine.rs  engine_server.rs  engine_test.rs  map.rs  mod.rs
src/engine/event/: keyboard_event.rs  map_event.rs  mod.rs  move_event.rs  my_event.rs  window_event.rs
src/engine/plugin/: camera_ctrl.rs  clipboard.rs  fps.rs  mod.rs  player.rs  tile_map.rs
src/engine/scene/: mod.rs  snake.rs
src/net/: game_server.rs  mod.rs  net_server.rs
src/util/: collapse.rs  mod.rs  rsa.rs  wave_func_collapse.rs
util/: Cargo.toml
util/src/: aes.rs  lib.rs  rsa.rs  wave_func_collapse.rs
