[package]
name = "prime-game"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
base64 = "0.13"
bevy = "0.4"
bevy_rapier2d = "0.8"
clipboard = "0.5.0"
libaes = "0.6"
rand = "0.7"
rocksdb = "0.15"
rsa = "0.3"
rustyline = "8"
sha2 = "0.9"
tokio = {version = "1.2", features = ["rt-multi-thread", "macros"]}
