[package]
name = "client"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
base64 = "0.13"
bevy = "0.4"
rapier2d = "0.6"
bevy_rapier2d = "0.8"
bevy_networking_turbulence = "0.2"
clipboard = "0.5.0"
libaes = "0.6"
rand = "0.7"
rocksdb = "0.15"
rsa = "0.3"
rustyline = "8"
sha2 = "0.9"
tokio = {version = "1.2", features = ["full"]}
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0"
futures = { version = "0.3", features = ["thread-pool"]}
