[package]
name = "client"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }

bincode = "1.3"
bevy = "0.5"
bevy_rapier2d = "0.9"
clipboard = "0.5.0"
rand = "0.8"
rustyline = "8"
tokio = {version = "1.2", features = ["full"]}
