[package]
name = "client"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
config = { path = "../config" }
common = { path = "../common" }
data = { path = "../data" }
protocol = { path = "../protocol" }

bincode = "1.3"
bevy = "0.5"
bevy_rapier2d = "0.10"
bevy_egui = "0.6"
bevy_tilemap = "0.4"
clipboard = "0.5.0"
rustyline = "8"
tokio = {version = "1.8", features = ["full"]}
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
bytes = "1"
rand = "0.8"
