[package]
name = "main"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
server = { path = "../server" }
client = { path = "../client" }
util = { path = "../util" }
common = { path = "../common" }
protocol = { path = "../protocol" }

tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test_server"
path = "src/test_server.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"