[package]
name = "run"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
engine = { path = "../engine" }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }
