[package]
name = "server"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
util = { path = "../util" }
common = { path = "../common" }

serde = {version = "1", features = ["derive"]}
serde_json = "1"
base64 = "0.13"
rapier2d = "0.6"
crossbeam = "0.8"
rand = "0.8"
rocksdb = "0.15"
rustyline = "8"
sha2 = "0.9"
tokio = {version = "1.2", features = ["full"]}
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0"
futures = { version = "0.3", features = ["thread-pool"]}
