[package]
name = "shadow-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
common = { path = "../common" }
data = { path = "../data" }
protocol = { path = "../protocol" }

tokio = {version = "1.2", features = ["full"]}
bevy = "0.5"
bevy_rapier2d = "0.9"
bincode = "1.3"
