[package]
name = "shadow-server"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

[dependencies]
data = { path = "../data" }
config = { path = "../config" }
common = { path = "../common" }
protocol = { path = "../protocol" }

serde = {version = "1", features = ["derive"]}
# serde_json = "1"
bincode = "1.3"
base64 = "0.13"
rapier2d = "0.7"
crossbeam = "0.8"
rand = "0.8"
rustyline = "8"
sha2 = "0.9"
tokio = {version = "1.2", features = ["full"]}
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0"
futures = { version = "0.3", features = ["thread-pool"]}
glam = "0.13.1"
